fix for #2841-Desktop: The gridlines on Rent Stabilize field is getting cut off

--- a/app/assets/stylesheets/table.scss
+++ b/app/assets/stylesheets/table.scss
@@ -29,7 +29,7 @@
     border-bottom: 1px solid #e8e8e8;
 }
 .table > tbody > tr > td:last-child {
-    border-bottom: 0 none;
+    border-bottom: 1 px solid #e8e8e8;
 }
 .table > tbody > tr:last-child > td:first-child {
     border-bottom-left-radius: 2px;
